gaps correction in .search__modes-list

--- a/src/components/blocks/search/__modes-list/search__modes-list.css
+++ b/src/components/blocks/search/__modes-list/search__modes-list.css
@@ -10,6 +10,10 @@
         justify-content: flex-start;
         color: #000;
         height: 50px;
+    }
+}
+@media screen and (min-width: 940px) and (max-width: 1039px) {
+    .search__modes-list {
         gap: 0;
     }
 }
